# web_novel_ebook_builder

./: Cargo.toml  novel_info.toml
src/: main.rs  novel.rs  traverser.rs
src/novel/: epub.rs  kakuyomu.rs  novel_utils.rs  syosetu.rs
src/novel/kakuyomu/: content.rs
src/novel/syosetu/: content.rs  info_page.rs
