[package]
name = "web_novel_ebooks"
version = "0.1.0"
authors = ["Benjamin Cecile <bencecile@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kuchiki = "0.7.3"
rayon = "1.2.0"
reqwest = "0.9.22"

ebook-builder = { path = "../EBookBuilder" }
