[package]
name = "web_novel_ebooks"
version = "0.1.0"
authors = ["Benjamin Cecile <bencecile@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "0.7.5"
kuchiki = "0.7.3"
rayon = "1.2.0"
serde = { version = "^1", features = ["derive"] }
toml = "0.5.5"

ebook-builder = { path = "../EBookBuilder" }
